tests/application/gateway-api/application.yaml
apiVersion: skiperator.kartverket.no/v1alpha1
kind: Application
metadata:
  name: standard
spec:
  image: image
  port: 8080
  routingProvider: Standard
  ingresses:
    - standard.example.com
  redirectToHTTPS: true
