tests/application/gateway-api/missing-istio-revision.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gateway-api-application-no-istio
---
apiVersion: skiperator.kartverket.no/v1alpha1
kind: Application
metadata:
  name: no-istio
  namespace: gateway-api-application-no-istio
spec:
  image: image
  port: 8080
  routingProvider: standard
  ingresses:
    - no-istio.example.com
