tests/application/gateway-api/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gateway-api-application
  labels:
    istio.io/rev: asm-stable
